[gd_scene load_steps=7 format=2]

[ext_resource path="res://gui/inventory/inventory_tab/inventory_tab.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/gui/inventory_menu/equipamento.png" type="Texture" id=2]

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/bar:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 40, 2 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "click"

[sub_resource type="Animation" id=2]
resource_name = "hover"
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/bar:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 40, 2 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"

[node name="inventory_tab" type="Control" groups=["inventory_tab"]]
margin_right = 144.0
margin_bottom = 28.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
alignment = 1

[node name="tab_name" type="TextureRect" parent="VBoxContainer"]
margin_top = 6.0
margin_right = 145.0
margin_bottom = 28.0
rect_min_size = Vector2( 145, 22 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="bar" type="ColorRect" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 40.0
margin_bottom = 34.0
rect_min_size = Vector2( 20, 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/click = SubResource( 1 )
anims/hover = SubResource( 2 )
anims/idle = SubResource( 3 )

[connection signal="focus_entered" from="." to="." method="_on_inventory_tab_focus_entered"]
[connection signal="gui_input" from="." to="." method="_on_inventory_tab_gui_input"]
